[package]
name = "discord"
version = "0.1.0"
edition = "2021"

[lib]
name = "discord"
crate-type = ["cdylib"]

[dependencies]
discord-sdk = "0.3.0"
sha2 = "0.10.0"
widestring = "0.5.1"
tokio = { version = "1.8.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.9"

[dependencies.windows]
version = "0.33.0"
features = [
  "Win32_System_SystemServices",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_LibraryLoader",
  "Win32_System_Diagnostics_Debug"
  ]

[profile.release]
opt-level = 'z'
lto = true