[package]
name = "discord"
version = "0.1.0"
edition = "2021"

[lib]
name = "discord"
crate-type = ["cdylib"]

[dependencies]
discord-sdk = "0.3.2"
sha2 = "0.10.6"
widestring = "1.0.2"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.windows]
version = "0.44.0"
features = [
  "Win32_System_SystemServices",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_LibraryLoader",
  "Win32_System_Diagnostics_Debug"
  ]

[profile.release]
opt-level = 'z'
strip = true
lto = true
codegen-units = 1